--- a/catalog/templates/catalog.html
+++ b/catalog/templates/catalog.html
@@ -17,7 +17,7 @@
               </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a class="btn btn-primary" href="{% url 'catalog:catalog' %}" role="button">Перейти в товар</a>
+                  <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.id  %}" role="button">Перейти в товар</a>
                 </div>
               </div>
             </div>
