--- a/catalog/templates/product_detail.html
+++ b/catalog/templates/product_detail.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-
+{% load my_tags %}
 {% block content %}
 <div class="col" xmlns="http://www.w3.org/1999/html">
     <div class="card shadow-sm">
-        <img src="{{ product.image}}" class="img-thumbnail" alt="{{ product.name }}">
+        <img src="{{ product.image | media_filter }}" class="img-thumbnail" alt="{{ product.name }}">
         <div class="card-body">
             <p class="card-text">
                 <ul class="list-group">
@@ -30,7 +30,7 @@
 
             <div class="d-flex justify-content-between align-items-center"><div class="btn-group">
                 <a class="btn btn-primary" href="{% url 'catalog:catalog' %}" role="button">Назад</a>
-                <a class="btn btn-primary" href="#" role="button">Назад</a>
+                <a class="btn btn-primary" href="#" role="button">Редактировать</a>
             </div>
             </div>
         </div>
