--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -174,7 +174,7 @@
         <h1 class="fw-light">Чашечка горячего</h1>
         <p class="lead text-body-secondary">Каталог нашего магазина</p>
         <p>
-          <a href="#" class="btn btn-primary my-2">Main call to action</a>
+          <a href="{% url 'catalog:product_create' %}" class="btn btn-primary my-2">Создать товар</a>
           <a href="#" class="btn btn-secondary my-2">Secondary action</a>
         </p>
       </div>
