--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -18,6 +18,7 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk  %}" role="button">Перейти в товар</a>
+                  <a class="btn btn-danger" href="{% url 'catalog:product_delete' product.pk %}" role="button">Удалить</a>
                 </div>
               </div>
             </div>
