--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -8,9 +8,19 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4>Меню</h4>
           <ul class="list-unstyled">
-            <li><a href="{% url 'catalog:home' %}" class="text-white">Главная</a></li>
             <li><a href="{% url 'catalog:catalog' %}" class="text-white">Каталог</a></li>
             <li><a href="{% url 'catalog:contacts' %}" class="text-white">Контакты</a></li>
+            {% if user.is_authenticated %}
+            <li>
+              <form method="post" action="{% url 'users:logout' %}" style="display: inline">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-link nav-link">Выход</button>
+              </form>
+            </li>
+            {% else %}
+            <li><a href="{% url 'users:login' %}" class="text-white">Вход</a></li>
+            <li><a href="{% url 'users:register' %}" class="text-white">Регистрация</a></li>
+            {% endif %}
           </ul>
         </div>
       </div>
