--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -17,7 +17,9 @@
               </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
+                  {% if user.is_authenticated %}
                   <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk  %}" role="button">Перейти в товар</a>
+                  {% endif %}
                 </div>
               </div>
             </div>
