--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -30,7 +30,12 @@
 
             <div class="d-flex justify-content-between align-items-center"><div class="btn-group">
                 <a class="btn btn-primary" href="{% url 'catalog:catalog' %}" role="button">Назад</a>
-                <a class="btn btn-primary" href="#" role="button">Редактировать</a>
+                {% if perms.catalog.can_unpublish_product or user == product.owner %}
+                <a class="btn btn-primary" href="{% url 'catalog:product_update' product.pk %}" role="button">Редактировать</a>
+                {% endif %}
+                {% if perms.catalog.delete_product or user == product.owner %}
+                <a class="btn btn-primary" href="{% url 'catalog:product_delete' product.pk %}" role="button">Удалить</a>
+                {% endif %}
             </div>
             </div>
         </div>
