--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -177,7 +177,7 @@
           {% if user.is_authenticated %}
           <a href="{% url 'catalog:product_create' %}" class="btn btn-primary my-2">Создать товар</a>
           {% endif %}
-          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+          <a href="{% url 'catalog:categories' %}" class="btn btn-secondary my-2">Категории</a>
         </p>
       </div>
     </div>
